--- a/wrapper.html
+++ b/wrapper.html
@@ -516,6 +516,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.8.26/dayjs.min.js"></script>
 	<div id="body-mobile-background"></div>
 	{% block scripts %}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 	<!-- scripts to all be moved here. -->
 	{% endblock %}
 </body>
