Add in the custom address field

--- a/event_create_field_set.html
+++ b/event_create_field_set.html
@@ -21,7 +21,10 @@
       		{% include "./country_select.html" %}
       	</div>
         <div class="input-text ak-input-type-event input-address">
-      		<label for="id_event_address1">{% filter ak_text:"field_address1"|capfirst %}Street address{% endfilter %}</label>
+      		{% if page.custom_fields.events_custom_address_field %}{{page.custom_fields.events_custom_address_field}}
+{% else %}
+{% filter ak_text:"field_address1"|capfirst %}Street address{% endfilter %}
+{% endif %}	
       		<input autocomplete='off' id="id_event_address1" type="text" name="event_address1"/>
       	</div>
 	
