--- a/event_attend.html
+++ b/event_attend.html
@@ -236,7 +236,7 @@
 
 	{% endif %}
 				<ul class="compact" id="ak-errors"></ul>
-				<button id="id_submit" class="submit button button-big margin-bottom-normal button-primary arrow-right" type="submit" name="submit">{% if update %}{% filter ak_text:"event_attend_update_info"%}Update Your Info{% endfilter %}{% else %}{% filter ak_text:"event_attend_submit_button" %}Sign up{% endfilter %}{% endif %}</button>
+				<button id="id_submit" class="submit button button-big margin-bottom-normal add-registrant button-primary arrow-right" type="submit" name="submit">{% if update %}{% filter ak_text:"event_attend_update_info"%}Update Your Info{% endfilter %}{% else %}{% filter ak_text:"event_attend_submit_button" %}Sign up{% endfilter %}{% endif %}</button>
 				<div id="action-toc" class="text-small icon-before icon-faded" data-icon="&#xE93E;">
 					{% if page.custom_fields.form_short_toc %}
 						{{ page.custom_fields.form_short_toc }}
@@ -290,6 +290,8 @@
 			new mapboxgl.Marker()
 			.setLngLat(centerLocation)
 			.addTo(eventMap);
+
+		
 
         </script>
 
