--- a/wrapper.html
+++ b/wrapper.html
@@ -516,6 +516,22 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.8.26/dayjs.min.js"></script>
 	<div id="body-mobile-background"></div>
 	{% block scripts %}
+	<script>
+	$(document).ready(function() {
+        // Get token
+        fetch(`https://zaki-server.herokuapp.com/api/v1/auth`).then(response=>{
+          if(response.ok){
+            response.json().then(data=>{
+              localStorage.setItem("token", data.token);
+            })
+          } else {
+            throw new Error("Response not ok.")
+          }
+        }).catch(e=>{
+          console.log(`Auth error: ${e.message}.`)
+        });
+	});
+	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 	
 	<!-- scripts to all be moved here. -->
