--- a/zoom_webinar_list.html
+++ b/zoom_webinar_list.html
@@ -12,6 +12,15 @@
 }
 
 .single-webinar-item-ctn .left {
+  max-width: 5.5em;
+}
+.single-webinar-item-ctn .middle {
+  min-width: 70%;
+  max-width: 70%;
+}
+
+
+.single-webinar-item-ctn .left {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -32,15 +41,199 @@
 .webinar-day, .webinar-date {
   color: rgba(0,0,0,0.5);
 }
+.search-section {
+    background: rgb(15,129,233);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:column;
+    padding: 2.5em 0;
+    margin-bottom: 1em;
+}
+
+.search-section h4 {
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 1em;
+}
+
+.search-ctn {
+    width: 55%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    padding: 0 10px;
+}
+
+.search-ctn input {
+  border: none;
+}
+
+.search-ctn input:focus {
+  outline: none;
+}
+
+.search-ctn input::placeholder {
+  outline: none;
+  font-weight: normal;
+}
+
+.search-ctn button {
+  border-radius: 2px;
+}
+
+.rsvp-webinar {
+    background: white;
+    border: 3px solid black;
+    color: black !important;
+    text-shadow: none !important;
+    padding: .5em 2em;
+    text-decoration: none;
+    border-radius: 35px;
+}
+
+#loading-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
+
+/*TODO: Move this*/
+        .lds-default {
+            display: inline-block;
+            position: relative;
+            width: 64px;
+            height: 64px;
+        }
+
+        .lds-default div {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background: #0F81e9;
+            border-radius: 50%;
+            animation: lds-default 1.2s linear infinite;
+        }
+
+        .lds-default div:nth-child(1) {
+            animation-delay: 0s;
+            top: 29px;
+            left: 53px;
+        }
+
+        .lds-default div:nth-child(2) {
+            animation-delay: -0.1s;
+            top: 18px;
+            left: 50px;
+        }
+
+        .lds-default div:nth-child(3) {
+            animation-delay: -0.2s;
+            top: 9px;
+            left: 41px;
+        }
+
+        .lds-default div:nth-child(4) {
+            animation-delay: -0.3s;
+            top: 6px;
+            left: 29px;
+        }
+
+        .lds-default div:nth-child(5) {
+            animation-delay: -0.4s;
+            top: 9px;
+            left: 18px;
+        }
+
+        .lds-default div:nth-child(6) {
+            animation-delay: -0.5s;
+            top: 18px;
+            left: 9px;
+        }
+
+        .lds-default div:nth-child(7) {
+            animation-delay: -0.6s;
+            top: 29px;
+            left: 6px;
+        }
+
+        .lds-default div:nth-child(8) {
+            animation-delay: -0.7s;
+            top: 41px;
+            left: 9px;
+        }
+
+        .lds-default div:nth-child(9) {
+            animation-delay: -0.8s;
+            top: 50px;
+            left: 18px;
+        }
+
+        .lds-default div:nth-child(10) {
+            animation-delay: -0.9s;
+            top: 53px;
+            left: 29px;
+        }
+
+        .lds-default div:nth-child(11) {
+            animation-delay: -1s;
+            top: 50px;
+            left: 41px;
+        }
+
+        .lds-default div:nth-child(12) {
+            animation-delay: -1.1s;
+            top: 41px;
+            left: 50px;
+        }
+
+        @keyframes lds-default {
+
+            0%,
+            20%,
+            80%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.5);
+            }
+      }
 
 </style>
 <div class="section bg-white form-style-expanded width-normal padding-medium">
-    <div class="section-inner">
-    <h3 class="section-header meta margin-bottom-large">{% filter ak_text:"event_create_section_location" %}350 Webinars{% endfilter %}</h3>
-    {% comment %} <ul id="zoom-webinar-list"></ul> {% endcomment %}
+    <div class="section search-section">
+    <h4>350 Webinars</h4>
+    <div class='search-ctn'>
     <input type="search" id="search-webinars" name="s" class="search-form-field c7" value="" placeholder="Search webinars by topic...">
+    <button class='button button-primary'>SEARCH</button>
+    </div>
+
+    </div>
+    <div class="section-inner">
+    {% comment %} <ul id="zoom-webinar-list"></ul> {% endcomment %}
+    {% comment %} <input type="search" id="search-webinars" name="s" class="search-form-field c7" value="" placeholder="Search webinars by topic..."> {% endcomment %}
     <ul id="ak-campaign-list">
-    <div id="loading-text">Loading webinars...</div>
+    <div id="loading-text">
+              <div class="lds-default">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+    </div>
     </ul>
     <br/>
     </div>
@@ -54,7 +247,7 @@
         let filteredCampaignEvents = [];
         // Get token and set it in local storage
         const token = localStorage.getItem("token");
-        $("#search-webinars").hide();
+        // $("#search-webinars").hide();
         $("#no-webinars").hide();
         const listCtn = $("#zoom-webinar-list")
         if(!token){
@@ -103,15 +296,16 @@
                 <div class='left'>
                 <span class='webinar-day'>${window.moment(webinarAk.starts_at).format("ddd")}</span>
                 <span class='webinar-date'>${window.moment(webinarAk.starts_at).format("D")}</span>
+                <span class='webinar-day'>${window.moment(webinarAk.starts_at).format("MMM")}</span>
                 </div>
-                <div class='right'>
+                <div class='middle'>
                 <h4>${webinarAk.title}</h4>
                 <p>${window.moment(webinarAk.starts_at).format("ddd D MMM YYYY - HH:mm a ZZ")}</p>
                 <p>${webinarAk.public_description || "No agenda set yet for this webinar."}</p>
-                <p>
-                <a class="join-btn button button-primary" target="__blank" href="https://act.350.org/event/${campaignDetails.name}_attend/${webinarAk.id}"> Join Webinar </a>
-                </p>
                 </div>
+                <p class='right'>
+                <a class="join-btn rsvp-webinar" target="__blank" href="https://act.350.org/event/${campaignDetails.name}_attend/${webinarAk.id}"> RSVP </a>
+                </p>
               </li>`) 
           }
         };
